--- a/src/assets/scss/components/home/_wavy.scss
+++ b/src/assets/scss/components/home/_wavy.scss
@@ -1,7 +1,7 @@
 @mixin wavy {
   .waves {
     top: 100%;
-    transform: translateY(-90%);
+    transform: translateY(-100%);
     position: relative;
     width: 100%;
     height: 15vh;
